tests/NormalTests/paczka1/fuzzy1/64715506.err
Error in line 3: 5MaGuYBu3w S893 41,0
Error in line 1: i1lA S178 36,8
Error in line 6: Sk2z5K S178 59,7
Error in line 20: 5MaGuYBu3w S178 87,1
Error in line 24: S265 S893 75,7
Error in line 28: S265 S551 39,5
